--- a/src/app/skill-bar/skill-bar.component.html
+++ b/src/app/skill-bar/skill-bar.component.html
@@ -1,1 +1,1 @@
-<p [attr.aria-label]="al"><span [ngStyle]="{width : percent}">{{name}}</span></p>
+<p [attr.aria-label]="name + ' ' + percent"><span [ngStyle]="{width : percent}">{{name}}</span></p>
