--- a/src/app/skill-bar/skill-bar.component.scss
+++ b/src/app/skill-bar/skill-bar.component.scss
@@ -1,30 +1,29 @@
 p {
-  width: auto;
-  font-size: 1.5rem;
-  line-height: 1.7;
-  position: relative;
-  display: block;
   border-radius: 0.6rem;
   background: var(--secondary-text);
   border: 1px solid var(--tertiary-text);
-  text-align: left;
   color: var(--main-text);
+  display: block;
+  font-size: 1.5rem;
   font-weight: 500;
-  color: transparent;
+  line-height: 1.7;
+  position: relative;
+  text-align: left;
+  width: auto;
 }
 
 span {
-  content: '';
-  display: block;
   background: var(--main-subheading);
   background-image: linear-gradient(
     90deg,
     var(--main-subheading),
     var(--main-theme)
   );
-  color: var(--main-text);
   border-radius: 5px 4px 4px 5px;
-  text-align: center;
-  padding-right: 1rem;
+  color: var(--main-text);
+  content: "";
+  display: block;
   height: 100%;
+  padding-right: 1rem;
+  text-align: right;
 }
