--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,25 +30,25 @@ ol {
 }
 
 /* montserrat-900 - latin */
-// @font-face {
-//   font-family: "Montserrat";
-//   font-style: normal;
-//   font-weight: 900;
-//   font-display: swap;
-//   src: url("../public/fonts/montserrat-v15-latin-900.eot"); /* IE9 Compat Modes */
-//   src: local(""),
-//     url("../public/fonts/montserrat-v15-latin-900.eot?#iefix")
-//       format("embedded-opentype"),
-//     /* IE6-IE8 */ url("../public/fonts/montserrat-v15-latin-900.woff2")
-//       format("woff2"),
-//     /* Super Modern Browsers */
-//       url("../public/fonts/montserrat-v15-latin-900.woff") format("woff"),
-//     /* Modern Browsers */ url("../public/fonts/montserrat-v15-latin-900.ttf")
-//       format("truetype"),
-//     /* Safari, Android, iOS */
-//       url("../public/fonts/montserrat-v15-latin-900.svg#Montserrat")
-//       format("svg"); /* Legacy iOS */
-// }
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url("./assets/fonts/montserrat-v15-latin-900.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("./assets/fonts/montserrat-v15-latin-900.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./assets/fonts/montserrat-v15-latin-900.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./assets/fonts/montserrat-v15-latin-900.woff") format("woff"),
+    /* Modern Browsers */ url("./assets/fonts/montserrat-v15-latin-900.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./assets/fonts/montserrat-v15-latin-900.svg#Montserrat")
+      format("svg"); /* Legacy iOS */
+}
 
 body {
   min-height: 100vh;
