In progress adding Hero component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-skill-bar name="Angular" percent="20%"></app-skill-bar>
+<!-- <app-skill-bar name="Angular" percent="20%"></app-skill-bar> -->
 <router-outlet></router-outlet>
