Modifying interface for Hero Data

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -4,6 +4,6 @@
     <span>{{heroData.emHeading}}</span> {{heroData.heading}} 
   </h1>
   <ul>
-    <li *ngFor="let item of heroData.listItem">{{item.title}}</li>
+    <li *ngFor="let item of heroData.listItems">{{item.title}}</li>
   </ul>
 </section>
