Modifying skill-bar to use an @input binding Updating tests to reflect new data source Wrapping skill-bars in skills component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<!-- <app-skill-bar name="Angular" percent="20%"></app-skill-bar> -->
+<section>
+  <app-hero></app-hero>
+  <app-skills></app-skills>
+</section>
+<!-- <app-skill-bar *ngFor="let skill of skills" [skill]="skill"></app-skill-bar> -->
 <router-outlet></router-outlet>
