--- a/src/app/components/skill-bar/skill-bar.component.html
+++ b/src/app/components/skill-bar/skill-bar.component.html
@@ -1,1 +1,1 @@
-<p [attr.aria-label]="name + ' ' + percent"><span [ngStyle]="{width : percent}">{{name}}</span></p>
+<p [attr.aria-label]="bar.name + ' ' + bar.percent"><span [ngStyle]="{width : bar.percent}">{{bar.name}}</span></p>
