Adding resumes and links to resume and linkedIn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <section>
   <app-hero></app-hero>
   <app-skills></app-skills>
+  <app-resume></app-resume>
 </section>
-<!-- <app-skill-bar *ngFor="let skill of skills" [skill]="skill"></app-skill-bar> -->
+<footer>
+  <p>&copy; 2021 Caleb Masters</p>
+</footer>
+
 <router-outlet></router-outlet>
