Adding recent work section Adding recent work cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <section>
   <app-hero></app-hero>
+  <app-recent></app-recent>
   <app-skills></app-skills>
   <app-resume></app-resume>
 </section>
