--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -4,10 +4,10 @@
       {{ site.heading }}
     </h3>
     <h4 itemprop="title">
-      {{ site.subheading }}
-      <span *ngFor="let tech of site.techStack; let last = last">
+      <span>{{ site.subheading }}</span>
+      <i *ngFor="let tech of site.techStack; let last = last">
         {{ tech.name }}{{ last ? "." : "," }}
-      </span>
+      </i>
     </h4>
   </div>
 </article>
