--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,13 +1,21 @@
-<article>
-  <div attr.aria-level="1" attr.role="heading">
-    <h3 [attr.aria-label]="site.heading" itemprop="title">
-      {{ site.heading }}
-    </h3>
-    <h4 itemprop="title">
-      <span>{{ site.subheading }}</span>
-      <i *ngFor="let tech of site.techStack; let last = last">
-        {{ tech.name }}{{ last ? "." : "," }}
-      </i>
-    </h4>
-  </div>
-</article>
+<a
+  href="{{ site.link }}"
+  [ngStyle]="{ 'background': site.background }"
+  target="_blank"
+>
+<!-- TODO: Fix background CSS property -->
+  <article>
+    <div attr.aria-level="1" attr.role="heading">
+      <h3 [attr.aria-label]="site.heading" itemprop="title">
+        {{ site.heading }}
+      </h3>
+      <h4 itemprop="title">
+        <span>{{ site.subheading }}</span>
+        <i *ngFor="let tech of site.techStack; let last = last">
+          {{ tech.name }}{{ last ? "." : "," }}
+        </i>
+      </h4>
+    </div>
+    <p>{{site.description}}</p>
+  </article>
+</a>
