Adding base styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -253,3 +253,300 @@ img {
     right: -6px;
   }
 }
+
+
+/* Styles for layout */
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  height: auto;
+  color: var(--main-text);
+  background: var(--main-bg);
+}
+
+a {
+  cursor: pointer;
+}
+
+nav {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  padding-top: 1rem;
+
+  img {
+    max-height: 3rem;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin: 0;
+  }
+
+  .tech {
+    font-size: 1rem;
+    color: var(--main-footer-link);
+    background: var(--secondary-text);
+    justify-content: space-evenly;
+    padding: 0.3rem 0;
+
+    a {
+      color: var(--tertiary-bg);
+      text-decoration: none;
+
+      &.active,
+      &:hover {
+        border-bottom: 1px dotted var(--main-bg);
+      }
+    }
+  }
+
+  ul:first-child {
+    i {
+      margin-right: 1rem;
+    }
+
+    a {
+      font-family: "Montserrat";
+      color: var(--main-text);
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+
+      &:visited {
+        font-family: "Montserrat";
+        color: var(--main-text);
+      }
+
+      &.active,
+      &:hover {
+        color: var(--main-theme);
+        text-decoration: none;
+
+        i {
+          color: var(--main-theme);
+
+          &.gg-browser {
+            &::before,
+            &::after {
+              background: var(--main-theme);
+            }
+          }
+          &.gg-terminal::after {
+            background: var(--main-theme);
+          }
+        }
+      }
+    }
+  }
+}
+
+.container {
+  position: relative;
+}
+
+section {
+  width: 100%;
+}
+
+footer {
+  flex-grow: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 2rem;
+  overflow: hidden;
+
+  * {
+    position: relative;
+    z-index: 5;
+  }
+
+  p {
+    align-self: center;
+  }
+}
+
+/* Typography */
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 2.2rem;
+}
+
+h4 {
+  font-size: 1.7rem;
+}
+
+h2,
+h3 {
+  font-family: "Montserrat";
+}
+
+h2 span {
+  font-size: 1.7rem;
+  display: block;
+  text-align: center;
+  font-weight: normal;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h4 {
+  color: var(--tertiary-text);
+
+  span {
+    color: var(--main-heading);
+    font-size: 1.5rem;
+  }
+}
+
+/* Global Styling */
+section {
+  padding: 6rem 1rem;
+  margin: 0;
+  position: relative;
+}
+
+article + article {
+  margin-top: 1.5rem;
+}
+
+.top {
+  display: block;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+/* Footer */
+footer {
+  position: relative;
+  background: var(--main-footer);
+  color: var(--main-footer-text);
+  margin-top: 2rem;
+  padding-top: 1rem;
+
+  &.page {
+    margin-top: 0;
+    padding-top: 4rem;
+  }
+}
+
+// TODO: Figure out main container name to apply following styles
+
+// #__next {
+//   flex-basis: 100%;
+//   flex: 1;
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: column;
+// }
+
+
+@media screen and (min-width: 415px) {
+  .container {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: stretch;
+  }
+}
+
+@media screen and (min-width: 567px) {
+  section,
+  footer {
+    padding: 7rem 0;
+    margin-bottom: 0;
+  }
+
+  .top {
+    text-align: right;
+    font-size: 1.5rem;
+    padding-right: 2rem;
+  }
+
+  footer {
+    margin-top: 2rem;
+    padding-top: 4rem;
+
+    &.page {
+      padding-bottom: 4rem;
+    }
+  }
+}
+
+@media screen and (min-width: 784px) {
+  section {
+    padding: 8rem 0;
+  }
+
+  footer {
+    &.page {
+      padding-top: 6rem;
+    }
+  }
+}
+
+
+@media screen and (min-width: 905px) {
+  .hide {
+    display: none;
+  }
+
+  section {
+    padding: 10rem 0;
+  }
+
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  footer {
+    padding: 6rem 0;
+
+    &.page {
+      padding-bottom: 6rem;
+    }
+  }
+}
+
+@media screen and (min-width: 970px) {
+  h2 {
+    font-size: 3.8rem;
+  }
+
+  h3 {
+    font-size: 2.4rem;
+  }
+}
+
+
+@media screen and (min-width: 1100px) {
+  section {
+    padding: 14rem 0;
+  }
+
+  h2 {
+    font-size: 5rem;
+  }
+}
+
+@media screen and (min-width: 1640px) {
+  section {
+    padding: 18rem 0;
+  }
+
+  footer {
+    padding: 8rem 0;
+  }
+}
