Hardcoding links for images on recent work sections Adding angular to top nav

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<a href="{{ site.link }}" target="_blank">
+<a href="{{ site.link }}" target="_blank" class="{{ site.id }}">
   <!-- TODO: Fix background CSS property site.background -->
   <article>
     <div attr.aria-level="1" attr.role="heading">
