--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -12,24 +12,22 @@
         </a>
       </li>
       <li>
-        <a href="/#recent-work" al="Recent Work">
-          <i className="gg-browser"></i>
+        <a href="/#recent" al="Recent Work">
+          <i class="gg-browser"></i>
           Recent Work
         </a>
       </li>
       <li>
         <a href="/#skills" al="Skills">
-          <i className="gg-terminal"></i>
+          <i class="gg-terminal"></i>
           Skills
         </a>
       </li>
       <li>
-        <a href="/#resume" al="Resumé">
-          <i className="gg-briefcase"></i> Resumé
-        </a>
+        <a href="/#resume" al="Resumé"> <i class="gg-briefcase"></i> Resumé </a>
       </li>
     </ul>
-    <ul className="tech" aria-hidden="true">
+    <ul class="tech" attr.aria-hidden="true">
       <li>
         <a
           href="https://calebmasters.dev/"
@@ -47,6 +45,16 @@
           tabindex="-1"
         >
           React/Next.js
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://ng.calebmasters.dev/"
+          al="Change Website Tech Stack to: Angular.JS"
+          tabindex="-1"
+          class="active"
+        >
+          Angular/SCSS
         </a>
       </li>
     </ul>
