--- a/src/app/components/recent/recent.component.html
+++ b/src/app/components/recent/recent.component.html
@@ -2,6 +2,6 @@
   <div class="container">
     <h2>{{ recent.heading }}</h2>
     <app-card *ngFor="let site of recent.sites" [site]="site"></app-card>
-    <a href="/#top">Back to Top</a>
+    <a href="/#top" class="top">Back toTop</a>
   </div>
 </section>
