--- a/src/styles.scss
+++ b/src/styles.scss
@@ -259,7 +259,8 @@ img {
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  flex-basis: 100%;
+  justify-content: center;
   height: auto;
   color: var(--main-text);
   background: var(--main-bg);
@@ -441,17 +442,6 @@ footer {
     padding-top: 4rem;
   }
 }
-
-// TODO: Figure out main container name to apply following styles
-
-// #__next {
-//   flex-basis: 100%;
-//   flex: 1;
-//   display: flex;
-//   justify-content: center;
-//   flex-direction: column;
-// }
-
 
 @media screen and (min-width: 415px) {
   .container {
