--- a/src/app/components/recent/recent.component.scss
+++ b/src/app/components/recent/recent.component.scss
@@ -1,6 +1,5 @@
-
 /* Recent Work  */
-#recent-work {
+#recent {
   background: var(--main-bg);
   z-index: 2;
 
@@ -15,79 +14,8 @@
     }
   }
 
-  a {
-    transition: all 300ms cubic-bezier(0.46, 0.03, 0.52, 0.96);
-    padding: 12rem 1rem 1rem;
-    margin: 0 1rem 2rem;
-    background: var(--main-bg);
-    border: 1px solid var(--tertiary-text);
-    border-radius: 0.3rem;
-    position: relative;
-    overflow: hidden;
-    text-decoration: none;
-
-    h3 {
-      color: var(--main-heading);
-      margin-bottom: 1rem;
-    }
-
-    p {
-      color: var(--secondary-text);
-      margin-top: 2rem;
-      font-size: 1.5rem;
-    }
-
-    &.top {
-      padding: 1rem;
-      margin: 2rem 0 0;
-      background: unset;
-      border: none;
-      flex-basis: 100%;
-      color: var(--main-text);
-      text-decoration: underline;
-
-      &:hover,
-      &:focus,
-      &:active {
-        box-shadow: none;
-        text-decoration: none;
-      }
-
-      &:visited {
-        color: var(--main-text);
-      }
-
-      &:before {
-        display: none;
-      }
-    }
-
-    &::before {
-      border-bottom: 1px solid var(--tertiary-text);
-      position: absolute;
-      top: 0;
-      height: 10rem;
-      left: 0;
-      right: 0;
-      display: block;
-      content: "";
-      background-size: cover;
-    }
-
-    &.this-website::before {
-      background: no-repeat 50% 20% var(--background);
-      background-size: cover;
-    }
-
-    &:focus,
-    &:active,
-    &:hover {
-      box-shadow: 0 0 0.8rem 0 var(--main-heading);
-      filter: opacity(90%) saturate(1.2);
-    }
-  }
-
-  .container {
+  .container,
+  :host {
     display: flex;
     flex: 1 1 100%;
     flex-flow: row wrap;
@@ -143,5 +71,144 @@
     transform: skewY(2deg);
     transform-origin: 0;
     overflow: hidden;
+  }
+}
+
+@media screen and (min-width: 415px) {
+  #recent {
+    a {
+      flex: 2 1 calc(50% - 2rem);
+
+      &.top {
+        padding-right: 1.5rem;
+      }
+    }
+
+    &.page {
+      padding-left: 2rem;
+      padding-right: 2rem;
+      margin-top: 0;
+
+      article {
+        padding-top: 20rem;
+        margin-top: -3rem;
+
+        &::before {
+          height: 18rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 567px) {
+  #recent {
+    a,
+    h2 + a {
+      margin-top: 0;
+      flex: 1 calc(50% - 2rem);
+    }
+
+    .hide {
+      display: none;
+    }
+
+    &.page {
+      article {
+        padding-top: 26rem;
+        margin-top: -8rem;
+
+        &::before {
+          height: 23rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 784px) {
+  #recent {
+    h2 {
+      margin-bottom: 4rem;
+
+      + a {
+        flex: 1 calc(33% - 2rem);
+      }
+    }
+
+    /** moved to card
+    a {
+      flex: 1 calc(33% - 2rem);
+      align-items: stretch;
+
+      &:last-child {
+        align-self: flex-end;
+      }
+    }
+    **/
+
+    &.page {
+      article {
+        padding-top: 27rem;
+        margin-top: -12rem;
+
+        &::before {
+          height: 26rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 905px) {
+  #recent {
+    h2 {
+      margin-bottom: 5rem;
+    }
+
+    a {
+      padding-top: 24rem;
+
+      &:before {
+        height: 20rem;
+      }
+
+      p {
+        font-size: 1.7rem;
+      }
+    }
+
+    &.page {
+      article {
+        padding-top: 30rem;
+        margin-top: -16rem;
+
+        &::before {
+          height: 28rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 970px) {
+  #recent a:last-child {
+    display: block;
+    flex-basis: 33%;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  #recent {
+    &.page {
+      article {
+        padding-top: 38rem;
+        margin-top: -28rem;
+
+        &::before {
+          height: 36rem;
+        }
+      }
+    }
   }
 }
