--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -6,12 +6,14 @@
     </h2>
     <article>
       <header>
-        <h3>{{ resume.title }}</h3>
-        <span>
-          <a href="{{ resume.downloadUrl }}" target="_blank">
-            {{ resume.downloadText }}
-          </a>
-        </span>
+        <h3>
+          {{ resume.title }}
+          <span>
+            <a href="{{ resume.downloadUrl }}" target="_blank">
+              {{ resume.downloadText }}
+            </a>
+          </span>
+        </h3>
         <p>{{ resume.contactText }}</p>
         <p>
           <a href="{{ resume.url }}" target="_blank">
@@ -25,7 +27,7 @@
         <p>{{ resume.summary }}</p>
       </section>
     </article>
-    {{ resume.references }}
-    <a href="/#top">Back to Top</a>
+    <p>{{ resume.references }}</p>
+    <a href="/#top" class="top">Back toTop</a>
   </div>
 </section>
