--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -1,12 +1,16 @@
-
 /* Resume */
 #resume {
   background-color: var(--tertiary-bg);
   color: var(--main-heading);
 
-  h2 {
+  h3 {
     color: var(--main-heading);
+    font-size: 2.8rem;
     margin-bottom: 2rem;
+
+    span {
+      display: block;
+    }
 
     a {
       background: var(--main-heading);
@@ -153,5 +157,142 @@
     background-color: var(--main-footer);
     transform: skewY(1.5deg);
     height: 3rem;
+  }
+}
+
+@media screen and (min-width: 415px) {
+  #resume {
+    a.top {
+      padding-right: 1.5rem;
+    }
+  }
+}
+
+@media screen and (min-width: 567px) {
+  #resume {
+    padding-bottom: 10rem;
+
+    &::after {
+      bottom: -2rem;
+      height: 5rem;
+    }
+  }
+}
+
+@media screen and (min-width: 784px) {
+  #resume article section h4 span {
+    width: 20%;
+    float: right;
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 905px) {
+  #resume {
+    padding: 9rem 0 11rem;
+  }
+}
+
+@media screen and (min-width: 970px) {
+  #resume {
+    padding: 4rem;
+
+    h3 {
+      font-size: 3.8rem;
+
+      a {
+        font-size: 3.4rem;
+      }
+    }
+
+    article {
+      background: var(--main-bg);
+      border: 1px solid var(--tertiary-text);
+      border-radius: 0.3rem;
+      box-shadow: 0 0.8rem 0.8rem rgb(51 66 64 / 40%);
+      display: grid;
+      grid-gap: 4rem;
+      margin: 1rem 1rem 0;
+      padding: 4rem;
+      text-align: left;
+
+      section {
+        padding: 0;
+        text-align: justify;
+
+        section,
+        p {
+          padding: 0 2rem;
+        }
+      }
+
+      header {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: auto;
+        grid-template-areas:
+          "t t t t t t"
+          ". m1 m2 m2 m3 .";
+        text-align: center;
+
+        h3 {
+          grid-area: t / span 6;
+        }
+
+        p {
+          grid-area: m1;
+
+          + p {
+            grid-area: m2 / span 2;
+
+            + p {
+              grid-area: m3;
+            }
+          }
+        }
+      }
+
+      section {
+        h4 {
+          font-weight: bold;
+          margin-top: 1rem;
+
+          span {
+            width: 20%;
+            float: right;
+            text-align: right;
+          }
+        }
+
+        h5 {
+          font-weight: bold;
+        }
+      }
+
+      ul {
+        margin-left: 2rem;
+        font-size: 1.6rem;
+        list-style-type: circle;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  #resume {
+    padding: 13rem 0 15rem;
+  }
+}
+
+@media screen and (min-width: 1640px) {
+  #resume {
+    padding: 17rem 0 19rem;
+
+    h3 {
+      font-size: 5rem;
+      a {
+        font-size: 4rem;
+      }
+    }
   }
 }
