--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -13,6 +13,6 @@
         ></app-skill-bar>
       </span>
     </article>
-    <a href="/#top">Back to Top</a>
+    <a href="/#top" class="top">Back toTop</a>
   </div>
 </section>
