--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -1,4 +1,3 @@
-
 /* Skills */
 #skills {
   background-color: var(--alt-secondary-bg);
@@ -19,9 +18,14 @@
     border: 1px solid var(--main-heading);
     border-radius: 0.4rem;
     padding: 2rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 2rem;
+    padding-bottom: 0;
+
+    span {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: 2rem;
+      margin-bottom: 2rem;
+    }
   }
 
   p {
@@ -72,6 +76,22 @@
 
     &:visited {
       color: var(--main-bg);
+    }
+  }
+}
+
+@media screen and (min-width: 567px) {
+  #skills {
+    .container {
+      padding: 1rem;
+    }
+
+    article span {
+      grid-template-columns: calc(50% - 1rem) calc(50% - 1rem);
+    }
+
+    h3 {
+      grid-column: span 2;
     }
   }
 }
