Updating links to other versions of the site

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -39,7 +39,7 @@
       </li>
       <li>
         <a
-          href="/"
+          href="https://react.calebmasters.dev/"
           al="Change Website Tech Stack to: React/Next.js"
           addClass="active"
           tabindex="-1"
