Including scss for github button update

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -45,6 +45,28 @@
     display: block;
   }
 
+  .github {
+    border-radius: .5rem;
+    border: .1rem solid var(--tertiary-text);
+    padding: 1rem;
+    margin: 1rem auto;
+    text-decoration: none;
+    color: var(--tertiary-text);
+    display: flex;
+    justify-content: space-around;
+    width: 25rem;
+
+    &:hover {
+      background-color: var(--main-theme);
+      border: .1rem solid var(--tertiary-text);
+      color: var(--main-bg);
+
+      img {
+        filter: invert(1);
+      }
+    }
+  }
+
   &.page {
     padding-bottom: 8rem;
     min-height: 0;
