Updating github link with noopener

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -11,6 +11,7 @@
     attr.aria-label="{{ heroData.linkAriaLabel }}"
     target="_blank"
     class="{{ heroData.linkClass }}"
+    rel="noopener"
   >
     <img
       src="{{ heroData.linkImgURL }}"
