Adding vue to nav & recent work section for this site

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -50,11 +50,20 @@
       <li>
         <a
           href="https://ng.calebmasters.dev/"
-          al="Change Website Tech Stack to: Angular.JS"
+          al="Change Website Tech Stack to: Angular.js"
           tabindex="-1"
           class="active"
         >
           Angular/SCSS
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://vue.calebmasters.dev/"
+          al="Change Website Tech Stack to: Vue.js/SCSS/TS"
+          tabindex="-1"
+        >
+          Vue.js/SCSS/TS
         </a>
       </li>
     </ul>
