--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -232,7 +232,7 @@
         grid-template-rows: auto;
         grid-template-areas:
           "t t t t t t"
-          ". m1 m2 m2 m3 .";
+          "m1 m1 m2 m2 m3 m3";
         text-align: center;
 
         h3 {
